[package]
name = "adventure"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.11", features=["derive"] }
config = { version = "0.13.3", features = ["ini"] }
reqwest = { version = "0.11.16", features = ["blocking", "serde_json", "json"] }
serde = "1.0.159"
serde_json = "1.0.95"
